--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express-validator": "^7.2.1",
     "mongoose": "^8.9.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
+    "sharp": "^0.34.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
