--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prod": "set NODE_ENV=production&& nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
