Refactor user service to correct model name and streamline image processing; add mailer utility; remove unused validators; implement new authentication and profile validation logic.

--- a/config.env
+++ b/config.env
@@ -1,4 +1,12 @@
+# APP Configuration
 PORT=5145
-NODE_ENV=development
-DB_URI=mongodb://localhost:27017/vendora
 BASE_URL=http://localhost:5145
+DB_URI=mongodb://localhost:27017/vendora
+
+# JWT
+JWT_SECRET_KEY=1c68ae5f136c87ea568ed56da7e12ce5
+JWT_EXPIRATION_TIME=30d
+
+# Email Settings
+EMAIL_USER=ahmed@gmail.com
+EMAIL_PASS=123456789
