--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "prod": "set NODE_ENV=production&& nodemon index.js"
+    "dev": "cross-env ENVIRONMENT=development nodemon index.js",
+    "prod": "cross-env ENVIRONMENT=production nodemon index.js",
+    "lint": "eslint ."
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -12,21 +13,18 @@
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "sharp": "^0.34.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
-    "prettier": "^3.4.2"
+    "@eslint/js": "^9.27.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.27.0",
+    "prettier": "^3.5.3"
   }
 }
