--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@eslint/js": "^9.27.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.27.0",
+    "nodemon": "^3.1.10",
     "prettier": "^3.5.3"
   }
 }
