--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ JWT_SECRET_KEY=1c68ae5f136c87ea568ed56da7e12ce5
 JWT_EXPIRATION_TIME=30d
 
 # Email Settings
-EMAIL_USER=ahmed@gmail.com
-EMAIL_PASS=123456789
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_password
