--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
     "sharp": "^0.34.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
