--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "vendora",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js",
+    "start": "cross-env ENVIRONMENT=production node index.js",
     "dev": "cross-env ENVIRONMENT=development nodemon index.js",
-    "prod": "cross-env ENVIRONMENT=production nodemon index.js",
     "lint": "eslint ."
   },
   "dependencies": {
