feat: add environment configuration files for development and production

--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,8 @@
 # APP Configuration
 PORT=5145
-BASE_URL=http://localhost:5145
-DB_URI=mongodb://localhost:27017/vendora
+DB_URI=*****
+ASSETS_BASE_URL=https://node-vendora.vercel.app
 WHITE_LIST=["http://localhost:3000"]
-ENVIRONMENT=development
 
 # JWT Configuration
 JWT_SECRET_KEY=*****
@@ -14,6 +13,6 @@ JWT_RT_EXPIRATION_TIME=86400
 EMAIL_USER=*****
 EMAIL_PASS=*****
 
-# Stripe Configuration
+# Stripe Configuration - Stripe webhook will call the LIVE endpoint
 STRIPE_SECRET_KEY=*****
 STRIPE_WEBHOOK_SECRET_KEY=*****
